Fixed importations, added more firefox fallbacks
- Fixed undefined lang not inferring 'en' properly
- Fixed link icon too big warning
- Importing >64B icon aliases it
- Fixed searchbar request import

--- a/src/styles/SCSS/_global.scss
+++ b/src/styles/SCSS/_global.scss
@@ -344,14 +344,30 @@ body {
 		-webkit-appearance: none;
 		position: relative;
 		height: 2px;
-		background: $focusedGrey;
 		cursor: pointer;
+		background-color: $focusedGrey;
 		border-radius: 1.5rem;
 		opacity: 1;
-		transition: background-color 0.1s;
 
-		&:hover {
-			background: $borderGrey;
+		/* Firefox */
+		&::-moz-range-track {
+			height: 2px;
+			border-radius: 50px;
+			background: $focusedGrey;
+		}
+
+		&::-moz-range-progress {
+			background-color: $borderGrey;
+		}
+
+		&::-moz-range-thumb {
+			background: #fff;
+			height: 20px;
+			width: 20px;
+			border-radius: 50px;
+			border: 0;
+
+			box-shadow: $thumbShadow;
 		}
 	}
 
@@ -368,29 +384,6 @@ body {
 
 	input[type='range']::-ms-thumb {
 		margin: 0; /* Resets margin in Edge since it supports -webkit-slider-thumb as well */
-	}
-
-	/* Firefox */
-	&::-moz-range-track {
-		height: 2px;
-		border-radius: 50px;
-		background: $inputGrey;
-	}
-
-	&::-moz-range-progress {
-		background-color: $blue;
-		height: 2px;
-		border-radius: 50px;
-	}
-
-	&::-moz-range-thumb {
-		background: #fff;
-		height: 20px;
-		width: 20px;
-		border-radius: 50px;
-		border: 0;
-
-		box-shadow: $thumbShadow;
 	}
 
 	/*Edge*/
@@ -440,8 +433,4 @@ body {
 		border: solid 3px transparent;
 		border-radius: 15px;
 	}
-
-	// &.scroll::-webkit-scrollbar-thumb {
-	// 	box-shadow: inset 0 0 15px 15px $borderGrey;
-	// }
 }
